src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Pick up address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ageing__c</fullName>
        <formula>if(ISPICKVAL( Task_Type__c, &apos;Completed&apos;),Task_Closure_Date__c - DATEVALUE(CreatedDate) ,  Today() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ageing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attempted_By1__c</fullName>
        <formula>CreatedBy.FirstName +&apos; &apos;+ CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attempted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attempted_By__c</fullName>
        <label>Attempted By</label>
        <picklist>
            <picklistValues>
                <fullName>Aditya pawar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atharva kale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandni shinde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chetan mangde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dattatray Mohite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harshad Kadam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jyoti jadhav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kanif Murade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Koushik Goswami</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja Gavade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poonam Kulkarni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shubham Pimpalkar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shweta dekate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sohail shaikh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Srushti lohar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amol Misal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruchita Gorde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tejas Jadhav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chanda Ghogare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallavi Pawar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karishma Satarkar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanjay Sahni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shubhangi Chaudhari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subham Kalshetti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shraddha Gosavi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sudeep Deshmukh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Range__c</fullName>
        <formula>if(  NOT(ISNULL(Budget_Site_Visit_In_Lacs__c)),
    if(Budget_Site_Visit_In_Lacs__c &lt; 35,
    &apos;Below 35L&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt;= 35 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;=50,
    &apos;36 To 50L&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 50 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 75,
    &apos;51 To 75L&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 75 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 100,
    &apos;76 To 1Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 100 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 125,
    &apos;1 To 1.25Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 125 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 150,
    &apos;1.25 To 1.50Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 150 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 175,
    &apos;1.50 To 1.75Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 175 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 200,
    &apos;1.75 To 2Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 200 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 225,
    &apos;2 To 2.25Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 225 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 250,
    &apos;2.25 To 2.50Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 250 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 275,
    &apos;2.50 To 2.75Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 275 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 300,
    &apos;2.75 To 3Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 300 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 325,
    &apos;3 To 3.25Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 325 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 350,
    &apos;3.25 To 3.50Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 350 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 375,
    &apos;3.50 To 3.75Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 375 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 400,
    &apos;3.75 To 4Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 400 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 425,
    &apos;4 To 4.25Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 425 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 450,
    &apos;4.25 To 4.50Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 450 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 475,
    &apos;4.50 To 4.75Cr.&apos;,
    if(Budget_Site_Visit_In_Lacs__c &gt; 475 &amp;&amp; Budget_Site_Visit_In_Lacs__c &lt;= 500,
    &apos;4.75 To 5Cr.&apos;,
    &apos;Above 5Cr.&apos;)))))))))))))))))))),&apos;&apos;
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Site_Visit_In_Lacs__c</fullName>
        <label>Budget Site Visit(In Lacs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_WebForm__c</fullName>
        <label>Budget_WebForm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <picklist>
            <picklistValues>
                <fullName>Below 1 Cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to 2 Cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 to 5 Cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 to 7.5 Cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.5 to 10 Cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 to 15 Cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 to 25 Cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 to 50 Cr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 Cr &amp; above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Attempt_Status__c</fullName>
        <label>Call Attempt Status</label>
        <picklist>
            <picklistValues>
                <fullName>Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit Sheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center Visit Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center Visit Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Contactable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Attempted_By_Name__c</fullName>
        <label>Closing Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Prashant Kalal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunal Takle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namonarayan Shirothiya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atul Chordia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vickrant Agarwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shailesh Khandelwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jagrat Ranka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkeen Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Bafna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaibhav Andhare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Mantri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Sharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indrajit Dhurwe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pratima Soni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Harale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Tripathi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akhil Chaturvedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiran Shinde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayank Yadav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja Jadhav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaseem Patel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitin Deshpande</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Gupta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reema Kadam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sajesh Pattanaik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarfraz Syed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav Herwade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yash Kothari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanmay Gore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Back_Date__c</fullName>
        <label>Call Back Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Back__c</fullName>
        <label>Call Back</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Disposition__c</fullName>
        <label>Call Disposition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Call_Proposed_Date_Of_Visit__c</fullName>
        <label>Call Proposed Date Of Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Rating__c</fullName>
        <label>Visit Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Source__c</fullName>
        <label>Call Source</label>
        <picklist>
            <picklistValues>
                <fullName>Channel Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <label>Call Status</label>
        <picklist>
            <controllingField>Communication_Type__c</controllingField>
            <picklistValues>
                <fullName>Call complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ringing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spoke to 3rd party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Switched off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Time__c</fullName>
        <label>Call Time</label>
        <picklist>
            <picklistValues>
                <fullName>08:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Lookup</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <referenceTo>Channel_Partner__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communication_Type__c</fullName>
        <label>Communication Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <label>Configuration</label>
        <picklist>
            <picklistValues>
                <fullName>1.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penthouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Villa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Showroom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <picklist>
            <controllingField>Function__c</controllingField>
            <picklistValues>
                <fullName>Roadblock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone Billed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone Recovered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Recovered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession amount Recovered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possession Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement Soft Copy Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KYC for Registration Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome Call Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation in Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File returned to Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fit Out Possession In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fit Out Possession Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents Collection WIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Application Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Application Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan from self source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-funding</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <label>Decision Maker</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DueTime__c</fullName>
        <label>DueTime</label>
        <picklist>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duplicate_Received_Date__c</fullName>
        <description>Date on which the latest duplicate enquiry was recd</description>
        <label>Duplicate Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <description>Also using for loan officer Email Id</description>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Visit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold - Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm - Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisit Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisit Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisit Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Channel Partner</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>Activities (Existing Channel Partner)</relationshipLabel>
        <relationshipName>ActivityBroker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Revisit_Date__c</fullName>
        <description>VDNB related</description>
        <label>Expected Revisit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_closure_date__c</fullName>
        <description>VDNB related</description>
        <label>Expected closure date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Institute__c</fullName>
        <label>Visiting At</label>
        <picklist>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venue Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Status__c</fullName>
        <label>Follow Up Status</label>
        <picklist>
            <picklistValues>
                <fullName>Deciding - Need More Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussing with Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arranging Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Looking for Other Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Loan Eligibility/Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Deviation Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Schedule Deviation Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <description>web2lead enquiry fields</description>
        <label>FullName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking Management</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IP_Address_Web2Lead__c</fullName>
        <label>IP Address Web2Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>